<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ion Com</string>
    <string name="action_settings">Settings</string>
    <string name="well_come">Chào mừng tới IonCom App!</string>
    <string name="title_list">Danh sách thí nghiệm</string>
    <string name="title_instruction">Hướng dẫn sử dụng</string>
    <string name="title_about">Giới thiệu</string>
    <string name="content_list">Đây là một list các thí nghiệm</string>
    <string name="content_instruction">Hướng dẫn</string>
    <string name="content_about">	    Ion Com là một Android app dùng để mô phỏng các thí nghiệm Hóa học. \n
		Các thành viên thực hiện bao gồm:\n
			\t 1. Võ Anh Hưng.\n
			\t 2. Đinh Trung Anh.\n
			\t 3. Ngô Minh Sơn.\n
			\t 4. Đặng Minh Dũng.\n
		\tVới mong muốn mang lại cho học sinh những cái nhìn trực quan, chúng tôi đã cố gắng hoàn thiện sản phẩm nhưng chắc chắn rằng sẽ cần nhiều hơn những góp ý từ người sử dụng để sản phẩm hiệu quả hơn.    </string>
    <string name="show_info">Thông tin thí nghiệm</string>
    <string name="hide_info">Ẩn thông tin</string>
    <string name="equation_example">HCl &#8212;> H+ + Cl-</string>
    <string name="phenomena_example">Các tia nước màu hồng phun lên làm đầy bình khí ở phía trên</string>
    <string name="explanation_example">khí HCl tan làm giảm áp suất trong bình làm nước phun lên thành tia, Nước có pha quỳ tím nên khi HCl tan vào nước thì tạo thành dung dịch axit</string>
    <string name="step_example">Thiết kế thí nghiệm như hình vẽ</string>

</resources>