<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray" >

    <LinearLayout
        android:id="@+id/ll_show_info"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:background="@color/blue"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/tv_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/step_example" />

        <TextView
            android:id="@+id/tv_equation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/equation_example" />

        <TextView
            android:id="@+id/tv_phenomena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/phenomena_example" />

        <TextView
            android:id="@+id/tv_explanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/explanation_example" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="hideInfoOnClicked"
            android:text="@string/hide_info" />
    </LinearLayout>

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:layout_toRightOf="@id/ll_show_info"
        android:hardwareAccelerated="true" />

    <Button
        android:id="@+id/btn_show_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="showInfoOnClicked"
        android:text="@string/show_info" />

</RelativeLayout>